fix for key generation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>blockchain.js</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/appwrite@13.0.0"></script>
+    <script>
+        const { Client } = Appwrite;
+    </script>
     <script>
         tailwind.config = {
             theme: {
