--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
                         <span class="tag is-medium is-primary">Start of the chain</span>
                     </header>
                 </div>
+                <button class="modalTrig" id="modalTrig" data-target="modal-js-example">
+                    Create a new transaction
+                </button>
+                <div class="modal" id="transactionModal">
+                    <div class="modal-background"></div>
+                    <div class="modal-content">
+                      
+                    </div>
+                    <button class="modal-save" aria-label="save"></button>
+                    <button class="modal-close is-large" aria-label="close"></button>
+                </div>
             </div>
         </div>
     <script src="./js/keygen.js"></script>
