--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <div class="modal" id="transactionModal">
                     <div class="modal-background"></div>
                     <div class="modal-content">
-                      
+                        <div class="box" id="form">
+
+                        </div>
                     </div>
                     <button class="modal-save" aria-label="save"></button>
                     <button class="modal-close is-large" aria-label="close"></button>
