--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
                 </div>
                 <div class="navbar-end">
                     <div class="navbar-item">
+                        <div class="field is-horizontal">
+                            <div class="field-label">
+                                <label class="label">Current Money</label>
+                            </div>
+                            <div class="field-body">
+                                <div class="field">
+                                    <p class="control has-icons-right">
+                                        <input class="input is-primary" type="text" readonly id="walletMoneyCount">
+                                        <span class="icon is-small is-right">
+                                            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M48.1 240c-.1 2.7-.1 5.3-.1 8v16c0 2.7 0 5.3 .1 8H32c-17.7 0-32 14.3-32 32s14.3 32 32 32H60.3C89.9 419.9 170 480 264 480h24c17.7 0 32-14.3 32-32s-14.3-32-32-32H264c-57.9 0-108.2-32.4-133.9-80H256c17.7 0 32-14.3 32-32s-14.3-32-32-32H112.2c-.1-2.6-.2-5.3-.2-8V248c0-2.7 .1-5.4 .2-8H256c17.7 0 32-14.3 32-32s-14.3-32-32-32H130.1c25.7-47.6 76-80 133.9-80h24c17.7 0 32-14.3 32-32s-14.3-32-32-32H264C170 32 89.9 92.1 60.3 176H32c-17.7 0-32 14.3-32 32s14.3 32 32 32H48.1z"/></svg>
+                                        </span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="navbar-item">
                         <div class="buttons">
                             <button class="button is-primary modalTrig" id="modalTrig" data-target="modal-js-example">
                                 Create a new transaction
@@ -82,8 +99,8 @@
             </div>
         </div>
     <script src="./js/keygen.js"></script>
+    <script src="./js/generation.js"></script>
     <script src="./js/classes.js"></script>
     <script src="./js/main.js"></script>
-    <script src="./js/generation.js"></script>
 </body>
 </html>
